--- a/app/src/main/res/layout/fragment_account_page.xml
+++ b/app/src/main/res/layout/fragment_account_page.xml
@@ -261,11 +261,11 @@
             android:layout_margin="10dp"
             android:drawablePadding="20dp"
             android:fontFamily="@font/work_sans_semibold"
-            android:text="Refer app"
+            android:text="Refer "
             android:textColor="@android:color/black"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:drawableStartCompat="@drawable/info" />
+            app:drawableStartCompat="@drawable/ic_baseline_share_24" />
 
         <View
             android:id="@+id/divider"
