--- a/app/src/main/res/layout/categorycardlayout.xml
+++ b/app/src/main/res/layout/categorycardlayout.xml
@@ -1,32 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="20sp"
-    android:layout_margin="10sp">
-
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_weight="1">
+        android:layout_margin="10sp">
 
         <ImageView
-            android:id="@+id/catimg"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-
-            android:src="@drawable/ic_launcher_background"
-            android:visibility="gone" />
+            android:id="@+id/imageView2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/category"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="hello"
-            android:textSize="30dp"
-            app:drawableEndCompat="@drawable/ic_baseline_arrow_right_24" />
+            android:text="India"
+            android:gravity="center_vertical"
+            android:layout_marginHorizontal="10sp"
+            android:textSize="18dp"
+            android:drawableRight="@drawable/ic_baseline_navigate_next_24"/>
     </LinearLayout>
-</androidx.cardview.widget.CardView>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        />
+
+</LinearLayout>
